ignore random code snippets

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ isetcam.wiki
 .DS_Store
 manual
 
+web/webImageBrowser/PackagingLog.html
+web/webImageBrowser/snippets_from_web/image_browser.fig
+web/webImageBrowser/snippets_from_web/image_browser.m
+web/webImageBrowser/PackagingLog.html
