Ignore autosave (*.asv) files.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ web/webImageBrowser/PackagingLog.html
 web/webImageBrowser/snippets_from_web/image_browser.fig
 web/webImageBrowser/snippets_from_web/image_browser.m
 web/webImageBrowser/PackagingLog.html
+
+*.asv
