--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ web/webImageBrowser/snippets_from_web/image_browser.m
 web/webImageBrowser/PackagingLog.html
 
 *.asv
+data/images/multispectral/FruitMCC.mat
